<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mItemChange"
        android:title="@string/txtChange">
        <menu>
            <item
                android:id="@+id/itemChangeBgColor"
                android:title="@string/txtChangeBgColor" />
            <item
                android:id="@+id/itemSetText"
                android:title="@string/txtSetText" />
            <item
                android:id="@+id/itemHide"
                android:title="@string/txtHide" />
            <item
                android:id="@+id/itemChangeFontColor"
                android:title="@string/txtChangeFontColor" />
            <item
                android:id="@+id/itemChangeShape"
                android:title="@string/txtChangeShape" />
        </menu>
    </item>
    <item
        android:id="@+id/mItemReset"
        android:title="@string/txtReset" />
    <item
        android:id="@+id/mItemExit"
        android:title="@string/txtExit" />
</menu>