<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layoutName" />

        <Button
            android:id="@+id/btnInstagram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn1" />

        <Button
            android:id="@+id/btnButtonExercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn2" />

        <Button
            android:id="@+id/btnCalculator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn3" />

        <Button
            android:id="@+id/btnMidterm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn4" />

        <Button
            android:id="@+id/btnMatch3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn5" />

        <Button
            android:id="@+id/btnPassingIntents"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn6" />

        <Button
            android:id="@+id/btnMenus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn7" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>